[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zylo-backend"
version = "0.1.0"
description = "FastAPI backend for Zylo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "fastapi-mail>=1.4.2",
]

[tool.setuptools]
packages = ["app"]

[tool.vercel]
entrypoint = "app.main:app"